# tree-sitter-openscad

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  NEWS.md  Package.swift  README.md  binding.gyp  default.nix  flake.nix  go.mod  grammar.js  justfile  package-lock.json  package.json  parser.dylib  pyproject.toml  setup.py  test.js  tree-sitter.json  ts.nu
.github/: publish.yml
.github/workflows/: publish.yml
bindings/c/: tree-sitter-openscad.h  tree-sitter-openscad.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_openscad/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterOpenscadTests/: TreeSitterOpenscadTests.swift
examples/: basic.scad  function-call-precedence.scad  functions-and-ternaries.scad  indexing.scad  list-comprehension.scad  logical-precedence.scad  mathematical-precedence.scad  modules.scad  statements.scad  ternaries.scad
parser.dylib.dSYM/Contents/Resources/DWARF/: parser.dylib
parser.dylib.dSYM/Contents/Resources/Relocations/aarch64/: parser.dylib.yml
queries/: highlights.scm  indents.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: items.txt  literals.txt  operators.txt  statements.txt
