[package]
name = "tree-sitter-openscad-ng"
description = "openscad grammar for the tree-sitter parsing library"
version = "0.6.0"
keywords = ["incremental", "parsing", "openscad"]
categories = ["parsing", "text-editors"]
authors = ["Mikhail Katychev <mkatych@gmail.com>"]
repository = "https://github.com/openscad/tree-sitter-openscad"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
name = "tree-sitter-openscad"
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.25"

[build-dependencies]
cc = "1.0"
