[package]
name = "tree-sitter-openscad-ng"
description = "openscad grammar for the tree-sitter parsing library"
version = "0.6.1"
keywords = ["incremental", "parsing", "tree-sitter", "openscad"]
categories = ["parsing", "text-editors"]
authors = ["Mikhail Katychev <mkatych@gmail.com>"]

repository = "https://github.com/openscad/tree-sitter-openscad"
edition = "2021"
license = "MIT"
readme = "README.md"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
]

[lib]
name = "tree_sitter_openscad"
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = "0.25"

[build-dependencies]
cc = "1.2"
